# ShareBook-Prototype

./: README.md  ShareBook.vpp
ShareBook/: ShareBook.pro  base64.cpp  base64.h  client.cpp  client.h  imageprovider.cpp  imageprovider.h  main.cpp  network.cpp  network.h  personaluicontrol.cpp  personaluicontrol.h  publishpagecontrol.cpp  publishpagecontrol.h  pushpagecontrol.cpp  rec.qrc
code/ShareBook/: CMakeLists.txt  ShareBook.pro  Toast.qml  cache.cpp  cache.h  comment.cpp  comment.h  commentbroker.cpp  commentbroker.h  commentinterface.cpp  commentproxy.cpp  jotting.cpp  jotting.h  jotting.h.orig  jottingbroker.cpp  jottingbroker.cpp.orig  jottingbroker.h  jottinginterface.cpp  jottinginterface.h  jottingnotification.cpp  jottingnotification.h  jottingproxy.cpp  jottingproxy.h.orig  jottingsocialcontrol.cpp  jottingsocialcontrol.cpp.orig  jottingsocialcontrol.h  main.cpp  main.qml  massagesequence.cpp  massagesequence.h  material.cpp  material.h  materialbroker.cpp  materialbroker.cpp.orig  materialbroker.h  materialbroker.h.orig  materialinterface.cpp  materialproxy.cpp  materialproxy.cpp.orig  messagesequence.cpp  (+26 more)
code/ShareBook/qml/: CyclePage.qml  JotDetailPage.qml  MessagePage.qml  PersonalPage.qml  PersonalRelationList.qml  PublishPage.qml  PushPage.qml
doc/: ShareBook_数据表.xlsx  Snowflake algorithm.docx  notification.txt
sequence_diagram/: 顺序图_第2版.vpp
uase_case/: 想书_用况建模_第4版.odt  想书_用况建模_第5版.odt  想书_用况建模_第6版.odt
uml/: Readme.md  Readme.md.orig  ShareBook.vpp  ShareBook.vpp.bak_000d  ShareBook.vpp.bak_000f  ShareBook.vpp.bak_001d  (+10 more)
(+1000 files in other folders)
